More bug fixes
UI:
• Error message will display above whatever is in the body/content of the eFP-Seq Browser instead of replacing it

Bug fix:
• Fixed issue where if the web service returns an error relating to using SAMTools on the BAM files, may cause either continuous loading or failed to load RNA-seq mapping
• Fixed issue where sorting arrows would not appear on Microsoft Edge
• Fixed issue where user cannot download the table as an image on Microsoft Edge
• Fixed misaligned navbar footer

Security:
• Fixed potential client-side cross-site scripting

Documentation:
• Updated installation notes within README

Known issue:
• If the web service timeouts, the eFP-Seq Browser will load continuously
• Loading circle is not centred

--- a/cgi-bin/core/style.css
+++ b/cgi-bin/core/style.css
@@ -405,9 +405,8 @@ a {
     position: sticky;
     bottom: 0;
     padding-top: 14px;
-    padding-bottom: 34px;
+    padding-bottom: 14px;
     background: #3d3d3d;
-    margin-left: -10%;
     align-items: center;
 }
 
